--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,17 @@
 	<head>
 		<title>Algolia Inferno Front</title>
 		<link rel="stylesheet" href="main.css"/>
+
+		<!-- Compiled and minified CSS -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+		<!-- Compiled and minified JavaScript -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+		<!-- Icons -->
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		<!--Let browser know website is optimized for mobile-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			
+		<base href="/">
 	</head>
 	<body>
 		<div id="app"></div>
